--- a/blog/posts/1+1=1.md
+++ b/blog/posts/1+1=1.md
@@ -6,10 +6,20 @@ draft: true
 
 # 1 + 1 = 1
 
-Outline
-- Introduce the issue
-- Talk about church numerals
-    - Mini implementation in OCaml
-- Talk about monoids
-    - Implementation in Haskell
-- Boom
+But what does it actually mean to add two numbers? Can we somehow morph the definition of $$+$$ to make $$1 + 1 = 1$$?
+
+## Church Numerals
+- Definition
+- Implementation in Coq
+- Definition of Add
+- Some basic theorems
+
+### Defining addition
+
+## Monoids
+
+### Implementing for lists
+### Implementing for numbers
+
+## Making 1 + 1 = 1 a reality
+
