--- a/blog/posts/1+1=1.md
+++ b/blog/posts/1+1=1.md
@@ -2,19 +2,55 @@
 title: 1 + 1 = 1
 description: There's more than meets the eye ;)
 draft: true
+excerpt: TODO
 ---
 
 # 1 + 1 = 1
 
+
 But what does it actually mean to add two numbers? Can we somehow morph the definition of $$+$$ to make $$1 + 1 = 1$$?
 
 ## Church Numerals
-- Definition
-- Implementation in Coq
-- Definition of Add
-- Some basic theorems
 
-### Defining addition
+In the 1930s, Alonzo Church introduced us to lambda calculus, a computation model that can simulate any Turing machine, thereby rendering it Turing complete. At its core, the lambda calculus consists of the following primitives:
+- Variables or terms (eg: $$x$$, $$y$$)
+- Lambdas of the form ($$\lambda x . y$$)
+- Application ($$x y$$), where $$x$$ and $$y$$ are lambdas
+
+We can compose these primitives to build some higher level abstractions. For example, we can encode booleans as follows:
+```
+TODO
+```
+
+A natural progression would then be to try to encode numerals using this calculi. This is where Church Numerals comes into play. Church Numerals are a way of encoding natural numbers in the lambda calculus. Formally speaking, a Church Numeral is a lambda where TODO insert definition.
+
+If we take `0` to be the zero element, and define a lambda `S` called a successor, we can encode numbers as follows:
+```
+O
+S O
+S S O
+S S S O
+S ... n times O
+```
+
+### Implementation in Coq
+
+We define an inductive type to represent the zero element `O` and the successor lambda `S`.
+```coq
+Inductive nat : Type :=
+    | O
+    | S (n : nat).
+```
+
+### Definition of add
+```coq
+TODO
+```
+
+### Proving some basic properties of add
+- Property 1
+- Property 2
+- Property 3
 
 ## Monoids
 
